[gd_scene load_steps=13 format=2]

[ext_resource path="res://_glb/enemies/turtle.glb" type="PackedScene" id=1]
[ext_resource path="res://entities/enemies/turtle.gd" type="Script" id=2]
[ext_resource path="res://material/env/ancient/gem.material" type="Material" id=3]
[ext_resource path="res://entities/enemies/hitbox.gd" type="Script" id=4]
[ext_resource path="res://material/env/ancient/white_metal.material" type="Material" id=5]
[ext_resource path="res://material/env/copper/copper_local_coords.tres" type="Material" id=6]

[sub_resource type="SphereShape" id=1]
radius = 0.6

[sub_resource type="CylinderShape" id=2]
height = 8.75624
radius = 34.1219

[sub_resource type="BoxShape" id=3]
extents = Vector3( 22.8916, 7.08241, 28.1071 )

[sub_resource type="SphereShape" id=4]
radius = 0.7

[sub_resource type="SphereMesh" id=5]
radius = 0.7
height = 1.4
radial_segments = 24
rings = 8

[sub_resource type="CylinderShape" id=6]
height = 1.07697
radius = 0.378493

[node name="turtle" groups=["dynamic", "enemy"] instance=ExtResource( 1 )]
collision_layer = 65537
collision_mask = 2
mass = 500.0
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource( 2 )
id = "turtle"
drops_coat = true
minimum_rarity = 1
maximum_rarity = 3
mesh_node = NodePath("turtle")
health = 100

[node name="turtle" parent="." index="0"]
material/0 = ExtResource( 5 )
material/1 = ExtResource( 6 )

[node name="turtle_top-kine" parent="." index="1"]
collision_mask = 2

[node name="mesh" parent="turtle_top-kine" index="0"]
visible = false

[node name="leg1" type="CollisionShape" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2567, 0.594825, -1.39134 )
shape = SubResource( 1 )

[node name="leg2" type="CollisionShape" parent="." index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.954504, 0.594825, -1.39134 )
shape = SubResource( 1 )

[node name="leg3" type="CollisionShape" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2567, 0.594825, 1.49678 )
shape = SubResource( 1 )

[node name="leg4" type="CollisionShape" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.954504, 0.594825, 1.49678 )
shape = SubResource( 1 )

[node name="turtle_bottom" parent="." index="6"]
collision_mask = 2

[node name="awareness" type="Area" parent="." index="7"]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="awareness" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.29114, 0 )
shape = SubResource( 2 )

[node name="gun0" type="Position3D" parent="." index="8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.81562, 1.67851, 0 )

[node name="awareness" type="Area" parent="gun0" index="0"]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="gun0/awareness" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.2164, 0, 0 )
shape = SubResource( 3 )

[node name="gun1" type="Position3D" parent="." index="9"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.4897e-08, 1.72737, -1.98898 )

[node name="awareness" type="Area" parent="gun1" index="0"]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="gun1/awareness" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.2164, 0, 0 )
shape = SubResource( 3 )

[node name="gun2" type="Position3D" parent="." index="10"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -1.75271, 1.7027, 4.76837e-07 )

[node name="awareness" type="Area" parent="gun2" index="0"]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="gun2/awareness" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.2164, 0, 0 )
shape = SubResource( 3 )

[node name="gun3" type="Position3D" parent="." index="11"]
transform = Transform( 1.94707e-07, 0, -1, 0, 1, 0, 1, 0, 1.94707e-07, 2.62002e-07, 1.72666, 1.85261 )

[node name="awareness" type="Area" parent="gun3" index="0"]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="gun3/awareness" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.2164, 0, 0 )
shape = SubResource( 3 )

[node name="weak_point" type="KinematicBody" parent="." index="12" groups=["target"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.18615, 0.0557154 )
collision_layer = 65541
collision_mask = 2
script = ExtResource( 4 )
source_path = NodePath("..")

[node name="CollisionShape" type="CollisionShape" parent="weak_point" index="0"]
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="weak_point/CollisionShape" index="0"]
mesh = SubResource( 5 )
material/0 = ExtResource( 3 )

[node name="OmniLight" type="OmniLight" parent="weak_point" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.219248, 0 )
light_color = Color( 1, 0.345098, 0.803922, 1 )
light_energy = 0.568
omni_range = 1.625

[node name="CollisionShape" type="CollisionShape" parent="." index="13"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -1.26817, 1.707, 0 )
shape = SubResource( 6 )

[node name="CollisionShape2" type="CollisionShape" parent="." index="14"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 1.25417, 1.707, 0 )
shape = SubResource( 6 )

[node name="CollisionShape3" type="CollisionShape" parent="." index="15"]
transform = Transform( -4.37114e-08, 4.37114e-08, 1, 1, -4.37114e-08, 4.37114e-08, 4.37114e-08, 1, -4.37114e-08, 0.0268823, 1.707, -1.40389 )
shape = SubResource( 6 )

[node name="CollisionShape4" type="CollisionShape" parent="." index="16"]
transform = Transform( -4.37114e-08, 4.37114e-08, 1, 1, -4.37114e-08, 4.37114e-08, 4.37114e-08, 1, -4.37114e-08, 0.0268824, 1.707, 1.42822 )
shape = SubResource( 6 )
